# clipboard

./: .gitignore  Cargo.toml  LICENSE.txt  Readme.md  example.config.ini
src/: config.rs  file_handlers.rs  logfile.rs  main.rs  utils.rs
src/global_hotkeys/: keyboard.rs  mod.rs
