[package]
name = "clipboard"
version = "0.3.1"
authors = ["Simon Schindler"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/iowi479/clipboard"

[dependencies]
anyhow = "1.0.90"
clipboard-win = "5.4.0"
thiserror = "1.0.64"
windows = { version = "0.58.0", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
] }

[build-dependencies]
winresource = "0.1.17"
